<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="105dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_right">
        <RelativeLayout
            android:id="@+id/rl_homework"
            style="@style/main_menu">
            <TextView
                android:id="@+id/icon_homework"
                android:text="@string/icon_homework"
                style="@style/icon.l.menu"/>
            <TextView
                android:text="@string/homework"
                style="@style/text.menu"/>
            <TextView
                android:id="@+id/icon_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_selector_left"
                android:textSize="20sp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="100dp"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_course"
            style="@style/main_menu">
            <TextView
                android:id="@+id/icon_course"
                android:text="@string/icon_course"
                style="@style/icon.l.menu"/>
            <TextView
                android:text="@string/course"
                style="@style/text.menu"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_mistake_book"
            style="@style/main_menu">
            <TextView
                android:id="@+id/icon_mistake_book"
                android:text="@string/icon_mistake_book"
                style="@style/icon.l.menu"/>
            <TextView
                android:text="@string/mistake_book"
                style="@style/text.menu"/>
        </RelativeLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>