<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_header"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/bg_bottom"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
        <TextView
            android:id="@+id/icon_backward"
            android:text="@string/icon_backward"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            style="@style/icon.m"
            android:layout_marginEnd="32dp"/>
        <LinearLayout
            android:id="@+id/ll_score"
            android:layout_width="128dp"
            android:layout_height="48dp"
            android:layout_toEndOf="@id/icon_backward"
            android:layout_centerVertical="true"
            android:background="@drawable/bg_border">
            <TextView
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_grey_border"
                android:text="@string/score"
                android:textSize="24sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_score"
                android:layout_width="64dp"
                android:layout_height="match_parent"
                android:textSize="24sp"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:id="@+id/icon_previous"
            android:layout_toStartOf="@id/tv_item"
            android:layout_centerVertical="true"
            android:text="@string/icon_previous"
            style="@style/icon.s"
            android:textColor="@color/dark3"/>
        <TextView
            android:id="@+id/tv_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="23sp"
            android:textColor="@color/dark3"
            android:layout_marginStart="72dp"
            android:layout_marginEnd="72dp"/>
        <TextView
            android:id="@+id/icon_next"
            android:layout_toEndOf="@id/tv_item"
            android:layout_centerVertical="true"
            android:text="@string/icon_next"
            style="@style/icon.s"
            android:textColor="@color/dark3"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <RadioGroup
                android:id="@+id/rg_tool"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginEnd="-12dp">
                <RadioButton
                    android:id="@+id/rb_pen"
                    android:text="@string/icon_pen"
                    style="@style/radio.icon"
                    android:layout_marginEnd="8dp"/>
                <RadioButton
                    android:id="@+id/rb_eraser"
                    android:text="@string/icon_eraser"
                    style="@style/radio.icon"/>
            </RadioGroup>
            <RadioGroup
                android:id="@+id/rg_guidance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="-12dp">
                <RadioButton
                    android:id="@+id/rb_comment"
                    android:text="@string/icon_comment"
                    style="@style/radio.icon"
                    android:layout_marginEnd="8dp"/>
                <RadioButton
                    android:id="@+id/rb_audio"
                    android:text="@string/icon_audio"
                    style="@style/radio.icon"/>
            </RadioGroup>
            <TextView
                android:id="@+id/icon_collect"
                style="@style/icon.m.operate"/>
            <TextView
                android:id="@+id/icon_submit"
                android:text="@string/icon_submit"
                style="@style/icon.m.operate"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_header">
        <FrameLayout
            android:id="@+id/fl_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"/>
        <RelativeLayout
            android:id="@+id/rl_board"
            android:layout_below="@id/fl_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:background="@drawable/bg_border">
            <SurfaceView
                android:id="@+id/sv_write"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/tv_board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textColor="@color/dark3"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true">
                <TextView
                    android:id="@+id/icon_fullscreen"
                    style="@style/icon.m"/>
                <TextView
                    android:id="@+id/icon_draft"
                    style="@style/icon.m"
                    android:layout_marginStart="30dp"/>
                <TextView
                    android:id="@+id/icon_solution"
                    android:text="@string/icon_solution"
                    style="@style/icon.m"
                    android:layout_marginStart="30dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_scroll"
                android:layout_width="28dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/icon_up"
                    android:text="@string/icon_up"
                    style="@style/icon.s"
                    android:textColor="@color/dark3"/>
                <name.wanghwx.ehomework.common.widget.VerticalSeekBar
                    android:id="@+id/vsb_scroll"
                    android:layout_width="24dp"
                    android:layout_height="240dp"
                    android:progressDrawable="@drawable/seek_bar_progress"
                    android:thumb="@drawable/seek_bar_thumb"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/icon_down"
                    android:text="@string/icon_down"
                    style="@style/icon.s"
                    android:textColor="@color/dark3"/>
            </LinearLayout>
        </RelativeLayout>
        <FrameLayout
            android:id="@+id/fl_tool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border"
            android:padding="21sp"
            android:visibility="gone"/>
    </RelativeLayout>
</RelativeLayout>