<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <!--<ImageView-->
        <!--android:layout_width="175dp"-->
        <!--android:layout_height="180dp"-->
        <!--android:layout_marginTop="90dp"-->
        <!--android:src="@mipmap/logo"/>-->

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="525dp"
        android:layout_marginTop="60dp"
        android:padding="50dp"
        android:background="@drawable/bg_round_border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_bottom"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/icon_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/icon_user"
                android:textSize="32sp"/>

            <EditText
                android:id="@+id/et_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="请输入账号或手机号"
                android:textSize="22sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_bottom"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/icon_lock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/icon_lock"
                android:textSize="32sp"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:inputType="textPassword"
                android:hint="请输入密码"
                android:textSize="22sp"/>

            <TextView
                android:id="@+id/icon_eye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/icon_eye_open"
                android:textSize="32sp"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/bg_grey_r2"
            android:text="登录"
            android:textSize="25sp"/>

    </LinearLayout>

</LinearLayout>