<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/rg_status"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <RadioButton
            android:id="@+id/rb_all"
            style="@style/radio.homework_status"/>
        <RadioButton
            android:id="@+id/rb_unsubmitted"
            style="@style/radio.homework_status"/>
        <RadioButton
            android:id="@+id/rb_uncorrected"
            style="@style/radio.homework_status"/>
        <RadioButton
            android:id="@+id/rb_corrected"
            style="@style/radio.homework_status"/>
    </RadioGroup>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <name.wanghwx.ehomework.common.widget.DrawableTextView
            android:id="@+id/dtv_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="180dp"
            android:drawableTop="@mipmap/empty"
            android:gravity="center"
            android:text="@string/empty"
            android:textSize="22sp"
            android:textColor="@color/dark6"
            app:drawable_height="210dp"
            app:drawable_width="180dp"
            android:drawablePadding="32dp"/>
        <RelativeLayout
            android:id="@+id/rl_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_homework"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_top">
                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_centerVertical="true"
                    android:textSize="23sp"
                    android:textColor="@color/dark3"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:gravity="center">
                    <TextView
                        android:id="@+id/icon_previous"
                        android:text="@string/icon_previous"
                        style="@style/icon.s.page"/>
                    <TextView
                        android:id="@+id/tv_page"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="23sp"
                        android:textColor="@color/dark3"
                        android:layout_marginStart="72dp"
                        android:layout_marginEnd="72dp"/>
                    <TextView
                        android:id="@+id/icon_next"
                        android:text="@string/icon_next"
                        style="@style/icon.s.page"/>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>